--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 body {
   font-family: "Inconsolata", monospace;
+  color: #ffffff;
+  font-size: 24px;
 }
 
 .container {
   max-width: 1140px;
+  min-height: 500px;
   padding: 0 20px;
   margin: 0 auto;
   padding: 36px 12px;
-  background-color: blue;
-}
-
-.container .welcome {
-  color: #ffffff;
+  background-color: #139ae2;
   text-align: center;
+  border: 12px solid #f06464;
 }
 
 .container .welcome h2 {
@@ -20,11 +20,41 @@ body {
   font-size: 48px;
 }
 
-.container .welcome p {
-  border: 2px solid #ffffff;
-  margin: 0 48px;
+.container .welcome .rulez {
+  font-size: 18px;
+  margin: 0 68px;
   padding: 12px 0;
+  border: 2px solid #ffffff;
   border-left: none;
   border-right: none;
+}
+
+.container .welcome .info {
+  margin-top: 36px;
+  font-size: 28px;
+}
+
+.container .btns {
+  margin: 48px;
+}
+
+.container .btns .btn {
+  background-color: #ffffff;
+  color: #139ae2;
+  border: 2px solid #139ae2;
+  height: 68px;
+  width: 124px;
+  border-radius: 25px;
+  transition: 1s;
+  outline: 0;
+}
+
+.container .btns .btn:hover {
+  color: #ffffff;
+  background-color: #f06464;
+}
+
+.container .btns .btn i {
+  font-size: 36px;
 }
 /*# sourceMappingURL=style.css.map */
